--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>MS project test</title>
 		<meta charset="utf-8">
-		<meta http-equiv="Content-Security-Policy" content="default-src 'self' style-src 'self' 'unsafe-inline'">
+		<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self'; font-src 'self'; unsafe-inline'">
    		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<script src="processing.js"></script>
 	</head>
